# easyshell

./: .gitignore  Makefile  README.md  meson.build  psh
include/: easyshell.h  es_builtins.h  es_builtins_internal.h  es_exit.h  es_help.h  es_line.h  es_log.h  es_version.h
src/: builtins.c  es_builtins.c  es_exit.c  es_help.c  es_line.c  es_main.c  es_version.c  main.c  meson.build  psh_builtins.c  util.c
